Bug 351224 - Crash enabling the pass-through mode on a transparency masked Group layer
Summary: Crash enabling the pass-through mode on a transparency masked Group layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-12 15:51 UTC by mvowada
Modified: 2015-08-22 10:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video example. (424.31 KB, video/mp4)
2015-08-12 15:52 UTC, mvowada
Details
backtrace (892.77 KB, text/plain)
2015-08-13 07:59 UTC, Halla Rempt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2015-08-12 15:51:30 UTC
Hi, I get a crash when I try to enable the pass-through mode on a transparency masked Group layer (see video below).
Krita closes itself and with gdb > "thread apply all bt", it returns an endless output so I can't provide any backtrace, sorry.

Krita: 2.9.6 (git 2ca3028) - Ubuntu 14.04, Unity

Reproducible: Always

Steps to Reproduce:
1. Click-and-drag over the canvas to select a region,
2. apply a transparency mask on a Group layer and
3. try to enable the pass-through mode.

Actual Results:  
Crash of Krita.
Comment 1 mvowada 2015-08-12 15:52:11 UTC
Created attachment 94006 [details]
Video example.
Comment 2 Halla Rempt 2015-08-13 07:55:39 UTC
Hi Mvowada,

Thanks for the report. I can reproduce easily :-)
Comment 3 Halla Rempt 2015-08-13 07:59:53 UTC
Created attachment 94012 [details]
backtrace

It's some kind of infinite loop.
Comment 4 Dmitry Kazakov 2015-08-14 10:09:37 UTC
Git commit c2437b408af6739dd0554dfea5001af52a5c7bd8 by Dmitry Kazakov.
Committed on 14/08/2015 at 10:09.
Pushed by dkazakov into branch 'calligra/2.9'.

Fix crash when activating Passthrough mode for a group with transparency mask

Masks' extent should not be included into the extent of a passthrough
layer, because they are explicitly disabled in this mode.
Fixes T567

M  +3    -1    krita/image/kis_group_layer.cc

http://commits.kde.org/calligra/c2437b408af6739dd0554dfea5001af52a5c7bd8
Comment 5 mvowada 2015-08-22 10:48:59 UTC
Hi Boudewijn and Dmitry. Thank you for quick solving! :-)